--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "webprodigies-plura",
+  "name": "plura",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
@@ -48,14 +47,14 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/uuid": "^9.0.7",
     "@uploadthing/react": "^6.0.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "^8.0.0-rc17",
-    "lucide-react": "^0.303.0",
+    "lucide-react": "^0.474.0",
     "next": "14.0.4",
-    "next-themes": "^0.2.1",
+    "next-themes": "^0.4.4",
     "prisma": "^5.7.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
@@ -65,9 +64,9 @@
     "react-resizable-panels": "^1.0.7",
     "sonner": "^1.3.1",
     "stripe": "^14.12.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.1.0",
+    "uploadthing": "^7.4.4",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
