--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.1",
+    "@clerk/nextjs": "4.29",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^6.3.1",
@@ -66,7 +66,7 @@
     "stripe": "^14.12.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.4.4",
+    "uploadthing": "6.10",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.24.1"
