--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^1.0.7",
     "sonner": "^1.3.1",
-    "stripe": "^14.12.0",
+    "stripe": "14.12.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "6.10",
